Created the barebones text for the other htmls

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <section class="pages" id="landing-pages">
         <header role="top-pages">
+            <a href="index.html">Home</a>
             <a href="portfolio.html">Technical Portfolio</a>
             <a href="qualifications.html">Qualifications</a>
             <a href="service.html">Service</a>
