Made a few changes to index and ceated a rudimentary CSS fyle for it

--- a/index.html
+++ b/index.html
@@ -5,28 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+
+    <link rel="stylesheet" type="text/css" href="landing_style.css"></link>
 </head>
 <body id="landing-page">
 <div class="background">
-    <section class = "top-title" id="landing-title">
-        <header role="top">
-            <h1>Website</h1>
-        </header>
-    </section>
 
-    <section class="pages" id="landing-pages">
-        <header role="top-pages">
-            <a href="index.html">Home</a>
-            <a href="portfolio.html">Technical Portfolio</a>
-            <a href="qualifications.html">Qualifications</a>
-            <a href="service.html">Service</a>
-            <a></a>
-        </header>
+    <section class = "top-part" id="top-landing">
+        <section class = "top-title" id="landing-title">
+            <header class="top-title2" role="top">
+                <h1>Website</h1>
+            </header>
+        </section>
+
+        <section class="pages" id="landing-pages">
+            <header role="top-pages">
+                <a href="index.html" class="button">Home</a>
+                <a href="portfolio.html" class="button">Technical Portfolio</a>
+                <a href="qualifications.html" class="button">Qualifications</a>
+                <a href="service.html" class="button">Service</a>
+            </header>
+        </section>
     </section>
 
     <div class="main-text" id="landing-main" role="main">
         <h4>My name is Paul Cyr!</h4>
-        <p>I am a Computer Science major of the class of '24 at Texas A&M University.</p>
+        <p>I am a Computer Science major of the class of '24 at Texas A&M University. aksjdskdj d asdh d las dhld jd d asjdh d djas hda djha dha da dja jasd dashja da </p>
     </div>
 
 
