Added the code for the other CSS files and made a few modifications

--- a/landingpage.html
+++ b/landingpage.html
@@ -26,6 +26,10 @@
         </section>
     </section>
 
+    <div class = "image">
+        <img src="temp.png" alt="Temporary Image">
+    </div>
+
     <div class="main-text" id="landing-main" role="main">
         <h4>My name is Paul Cyr!</h4>
         <p>I am a Computer Science major of the class of '24 at Texas A&M University. aksjdskdj d asdh d las dhld jd d asjdh d djas hda djha dha da dja jasd dashja da </p>
