--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,13 @@
                 </header>
             </section>
         </section>
-        
+
         <div class="portfolio-title" id="portfolio-title">
             <h3>Technical Portolfio</h3>
+        </div>
+
+        <div class="main-titles">
+            <p>Previous Projects</p>
         </div>
 
         <div class="main-text" id="portfolio-main" role="main">
