--- a/qualifications.html
+++ b/qualifications.html
@@ -27,8 +27,12 @@
             </section>
         </section>
         
-        <div class="portfolio-title" id="qualifications-title">
+        <div class="qualifications-title" id="qualifications-title">
             <h3>Qualifications</h3>
+        </div>
+
+        <div class="main-titles">
+            <p>Skills</p>
         </div>
 
         <div class="main-text" id="qualifications-main" role="main">
