--- a/service.html
+++ b/service.html
@@ -31,6 +31,10 @@
             <h3>Service</h3>
         </div>
 
+        <div class="main-titles">
+            <p>Service Projects</p>
+        </div>
+
         <div class="main-text" id="service-main" role="main">
             <p>This is where I will describe what I want to do to give back to my community.</p>
         </div>
